# SpineDoc-Aily-mcp

./: .env.template  .gitignore  AGENTS.md  BENCHMARK.md  CORE_LOGIC_SHOWCASE.py  GEMINI.md  QWEN.md  README.md  check_cuda.py  create_zai_bridge.py  debug_load.py  experiment_results.json  migrate_direct.py  migrate_v65.py  pyproject.toml  requirements.txt  setup.bat  setup_env.bat  spine_setup.py  start_mcp.bat
.claude/: settings.local.json
app/core/: config.py  models.py  resilience.py  system_guard.py
app/infra/: gpu_orchestrator.py
app/services/: aggregator.py  cloud_ocr_client.py  ocr_worker.py  parser.py
arxiv_paper/: spinedoc_arxiv.tex
backend/: cli_prototype.py  migrate_simple.py  migrate_v6.py  requirements.txt
backend/app/: __init__.py  version.py
backend/scripts/: benchmark_performance.py  diagnose_data_quality.py  fix_data_gaps.py  inspect_db_physical.py  reset_doc.py
ceshi_ocr/: 1.pdf.ocr_cache.json  1.pdf.toc_spine.json  2401.08406v3.pdf.ocr_cache.json
deploy/: spinedoc-mcp.service
docker/: Dockerfile  Dockerfile.ocr  docker-compose-db.yml  docker-compose-slm.yml  docker-compose.yml
docs/: 20260409_dev_log.md  20260410_architecture_refactor_plan.md  20260410_architecture_review.md  20260410_feat_isr_integration.md  20260410_fix_toc_logic_bugs.md  20260410_kg_module_backup.md  20260410_on_demand_ocr_backup_plan.md  20260411_architecture_evolution.md  20260413_checkpoint_resumption_plan.md  20260413_retrieval_3_0_pyramid_plan.md  20260413_retrieval_refactor_plan.md  20260413_witness_node_design.md  20260414_emergent_spine_design.md  20260414_galaxy_breathing_design.md  20260414_work_log_and_pm_plan.md  20260415_arch_refactoring_plan.md  20260415_architecture_evolution_plan.md  20260415_backend_audit_report.md  20260415_color_confidence_implementation_log.md  20260415_color_confidence_integration_log.md  20260415_config_refactoring_log.md  20260415_court_evolution_plan.md  20260415_dynamic_update_implementation_log.md  20260415_dynamic_update_plan.md  20260415_federated_court_implementation.md  20260415_federated_court_implementation_log.md  20260415_git_cli_implementation.md  20260415_git_version_control_log.md  20260415_internet_witness_implementation_log.md  20260415_llm_probe_and_fallback.md  20260415_metabolism_status.md  20260415_ocr_toc_decoupling.md  20260415_online_mode_implementation.md  20260415_project_closure_report.md  20260416_abstract_query_limitation.md  20260416_internet_purification_and_virtual_spine.md  20260416_logic_metabolism_and_scientific_confidence.md  20260416_the_logic_manifesto.md  20260416_v7_logic_mesh_design.md  20260416_virtualenv_deployment_plan.md  (+19 more)
experiments/: conflict_similarity_test.py
frp_0.61.2_windows_amd64/: frpc.toml
scripts/: arch_audit.py  audit_database.py  audit_galaxy_db.py  check_chunk_content.py  check_chunk_pages.py  check_toc_pages.py  convert_to_safetensors.py  create_galaxy_table.py  create_galaxy_table_new_base.py  debug_bitable_search.py  debug_galaxy_fields.py  demo_real_action.py  demo_semantic_evolution.py  diagnose_config.py  diagnostic_embedding.py  download_models.py  emoji_comment_cleaner.py  export_toc_to_json.py  find_sm4_chunks.py  fix_schema_v35.py  force_nuke_db.py  force_reset_doc.py  force_restore_spine.py  full_sovereignty_crusade.py  generate_synthetic_pdfs.py  generate_thesaurus_map.py  heal_bitable_manifest.py  ingest_docs.py  ingest_from_toc_and_ocr.py  ingest_game_standard.py  ingest_test_pdfs.py  ingest_tuimian_exclusive.py  init_bitable_schema.py  inspect_bitable_schema.py  inspect_chinese_keywords.py  inspect_db.py  inspect_db_chunks.py  inspect_paper_quality.py  inspect_toc_db.py  inspect_toc_pages.py  (+70 more)
scripts/debug_archive/: debug_chunk.py  (+2 more)
spine_cli/: main.py
tests/: test_core_foundation.py  test_spine_agent.py  test_spine_agent_integration.py
(+225 files in other folders)
