[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spine-cli"
version = "1.2.0"
description = "SpineDoc CLI - Agent-Native Logic Engine"
authors = [{ name = "SpineDoc Team", email = "admin@spinedoc.ai" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pymupdf>=1.23.0",
    "pgvector>=0.2.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.0.10",
    "jieba>=0.42.1",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0"
]

[project.scripts]
spine = "spine_cli.main:app"

[tool.setuptools]
packages = ["spine_cli", "backend", "backend.app", "backend.app.core", "backend.app.services", "backend.app.services.rag", "backend.app.services.toc", "backend.app.services.ocr", "backend.app.services.ocr.integration", "backend.app.services.knowledge", "backend.app.services.git_services", "backend.app.services.intelligence", "backend.app.services.intelligence.court", "backend.app.services.intelligence.galaxy", "backend.app.services.intelligence.witness"]

[tool.setuptools.package-dir]
"spine_cli" = "spine_cli"
"app" = "backend/app"
