[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spine-cli"
version = "1.2.0"
description = "SpineDoc CLI - Agent-Native Logic Engine"
authors = [{ name = "SpineDoc Team", email = "admin@spinedoc.ai" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pymupdf>=1.23.0",
    "pgvector>=0.2.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.0.10",
    "jieba>=0.42.1",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0"
]

[project.scripts]
spinedoc-mcp = "spine_interaction.aily.mcp_server:main"

[tool.setuptools]
packages = ["backend", "backend.app", "backend.app.core", "backend.app.services", "backend.app.services.toc", "backend.app.services.ocr", "backend.app.services.knowledge", "backend.app.services.git_services", "backend.app.services.intelligence", "spine_interaction", "spine_interaction.aily"]

[tool.setuptools.package-dir]
"app" = "backend/app"
